# cinema-lens-server

./: .gitignore  .gitlab-ci.yml  Dockerfile  pyproject.toml  requirements.txt
src/: brave.py  config.py  entity.py  extractor.py  letterboxd.py  main.py  neo4j.py  qdrant.py  qdrant_client_singleton.py  query.py  reddit.py  search_query.py  serp.py
