[project]
name = "cinema-lens-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "dibkb",email = "dibas9110@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "langchain>=0.1.9",
    "langchain-openai>=0.0.7",
    "python-dotenv>=1.0.1",
    "qdrant-client (>=1.13.3,<2.0.0)",
    "neo4j (>=5.28.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


