[project]
name = "cinema-lens-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "dibkb",email = "dibas9110@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "langchain>=0.1.9",
    "langchain-openai>=0.0.7",
    "python-dotenv>=1.0.1",
    "qdrant-client (>=1.13.3,<2.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "numpy (==2.1.0)",
    "langchain-groq (>=0.2.5,<0.3.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "serpapi (>=0.1.5,<0.2.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "langchain-google-genai (>=2.1.0,<3.0.0)",
    "praw (>=7.8.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


